--- a/index.html
+++ b/index.html
@@ -5,33 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
+    <link rel="stylesheet" href="http://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="angular.js"></script>
+    <script src="https://code.angularjs.org/1.6.6/angular-route.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script> -->
     <script src="app.js"></script>
 </head>
 <body>
-   
 
-<div ng-controller="shashiCtr">
-    <table border="1">
+   <!-- Fixed navbar -->
+   <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#!/login">login</a></li>
+          <li><a href="#!/register">register</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+        </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="../navbar/">Default</a></li>
+          <li><a href="../navbar-static-top/">Static top</a></li>
+          <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+
+<div class="test">
+
+  <ng-view></ng-view>
+        <input type="text" class="form-control" placeholder="search" ng-model="search.name">
+</div>
+<div class="test">
+    <input type="range" ng-model="range">
+</div>
+
+<div ng-controller="shashiCtr" class="container test">
+
+<input type="text" ng-model="limit">
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th>Name</th>
-                <th>id</th>
-                <th>photo</th>
-                <th>Runs</th>
+                <th>age</th>
+                <th>doj</th>
+                <th>salary</th>
+                <th>designation</th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="player in players">
-                <td>{{player.login}}</td>
-                <td>{{player.id}}</td>
-                <td><img ng-src="{{player.avatar_url}}" /></td>
-                <td>{{player.html_url}}</td>
+            <tr ng-repeat="player in users | filter:search | limitTo:range | orderBy:sort:reverse">
+                <td>{{player.name | jspiderFilter :limit }}</td>
+                <td>{{player.age}}</td>
+               
+                <td>{{player.doj | date:"MM/dd/yyyy"}}</td>
+                <td>{{player.salary | currency : "&#8377;"}}</td>
+                <td>{{player.designation}}</td>
 
             </tr>
         </tbody>
     </table>
+
+<form ng-submit="addPlayer()">
+<input class="form-control" type="text" placeholder="name" ng-model="newName" /> <br />
+<input  class="form-control"type="text" placeholder="id" ng-model="newId" /> <br />
+<input  class="form-control"type="text" placeholder="runs" ng-model="newRuns" /> <br />
+<input class="btn btn-danger"  type="submit" value="submit">
+</form>
+
+
 </div>
 </body>
 </html>
